    misc:Pre-Depends are present to avoid relying external processes
    for this.

  [ Colin Watson ]
  * Quote assignment to $recommended_compat in case it isn't a valid Perl
    version string (e.g. for Debian derivatives).  Fix typos that caused it
    not to be used correctly.  Use the /g flag so that all instances of the
    substitution variable are handled.  (Closes: #869780)

 -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000

debhelper (10.6.4) unstable; urgency=medium

  * dh_installmenu: Revert "Stop installing menu files in compat 11
    (menu-methods are still installed)".
  * dh: Revert "--without=build-stamp by default in compat 11".  Keep
    the compat 10 behaviour while enable packages to opt-in by
    explicitly passing --without=build-stamp themselves.
  * dh_installman: Apply patch from Sven Joachim to fix regression,
    where dh_installman would fail to remove the compressed manpage.
    With hardlinks involved, this could make dh_compress fail later.
    (Closes: #867846)
  * Dh_lib.pm: Rewrite reset_perm_and_owner to it does chmod + chown
    using perl built-ins rather than forking+exec.
  * dh_compress: Apply patch from Sven Joachim to make dh_compress
    gracefully handle hardlinks, where the target files already
    exists.  (Closes: #867881)
  * dh_install: Re-instate bug compatibility with debhelper (<< 10.6)
    where (some) path arguments where split on space as if it had
    been parsed in the config file.  (Closes: #867866)
  * dh_installdocs: Ditto.
  * dh_installexamples: Ditto.
  * dh_installinfo: Ditto.
  * dh_installman: Ditto.
  * Dh_Lib.pm: Fix a regression in handling of dangling symlinks for
    native file copying that caused dh_installdocs to no longer replace
    dangling symlinks with real files.  Thanks to Stéphane Glondu
    for the report.  (Closes: #868204)
  * dh_install: Silently disable bulk optimization when two source paths